# quick-network

./: .gitignore  LICENSE  README.md  pyproject.toml
ai_notes/: actant_cytoscape.md  initial_plan.md
explore/: config.py  models.py  source.py
frontends/actant_cytoscape/: index.html  package-lock.json  package.json
frontends/actant_cytoscape/public/: elements.json
frontends/actant_cytoscape/src/: main.ts
notebooks/: Demo.ipynb  actant-bug-report.json  actant-future.ipynb
qnet/: config.py
qnet/actant/: future.py
qnet/fractal_moment/: main.py
