[project]
name = "quick-network"
version = "0.1.0"
description = "Network visualization quick start"
authors = [
  { name = "Alex Warren", email = "exrhizo@gmail.com" }
]
requires-python = ">=3.12,<3.13"

dependencies = [
  "scikit-learn", # canonical package; covers `sklearn`
  "seaborn",
  "matplotlib",
  "scipy",
  "fastapi",
  "pandas",
  "numpy",
  "openai",
  "pydantic>=2",
  "pydantic-settings",
  "python-dotenv",
  "requests",
  "baml-py==0.201.0",
  "ruff>=0.12.1",
  "pyright>=1.1.402",
  "pandas-stubs>=2.2.3.250527",
  "click>=8.2.1",
  "pytest>=8.4.1",
  "rich>=14.0.0",
  "yq>=3.4.3",
  "ipykernel>=6.29.5",
  "cosmograph>=0.0.47",
  "graphistry>=0.41.2",
  "networkx>=3.5",
  "neo4j>=6.0.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["qnet*"]

# Tell uv to actually install the project into the env
[tool.uv]
package = true

# Optional: dev-only stuff that's nice for notebooks & testing
[dependency-groups]
dev = [
  "ipykernel",
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["explore/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = []

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "RUF002", "RUF003", "SIM117"]

[tool.pyright]
venvPath = "."
venv      = ".venv"
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportUnusedFunction = false
reportUnknownVariableType = "warning"
reportUnknownMemberType  = "none"
reportUnknownLambdaType = "none"
exclude = [".venv"]
